UI: Prevent Hero Title from wrapping onto two lines on Desktop displays

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ html {
     font-size: 110%;
     /* Scales all rem units proportionately up for desktop */
   }
+
+  .hero-title {
+    flex-wrap: nowrap;
+  }
 }
 
 @keyframes slowGradient {
